# auto-book

./: .env.example  .gitignore  AB Upgrade Heuristic Scoring System.rtf  AB upgrade Architecture.rtf  AGENTS.md  BLITZ_CALIBRATION_HARNESS.md  Makefile  README.md  UNIFIED_BUILD_PACKET.md  package-lock.json  package.json  signal_scoring_engine_learn_book.md
apps/api/: .gitignore  README.md  alembic.ini  pyproject.toml  setup_gpu.py
apps/api/alembic/: env.py
apps/api/app/: README.md  config.py  db.py  detection_config.py  jobs.py  main.py  models.py  schemas.py
apps/api/audiobook_editor_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: README.md  test_acx.py  test_alignment_issues.py  test_alignment_match_ratio.py  test_alt_take_clusters_endpoint.py  test_alt_takes.py  test_audio_analysis.py  test_auto_edit_export.py  test_blitz_advanced.py  test_blitz_config.py  test_blitz_dataset.py  test_blitz_harness.py  test_blitz_metrics.py  test_blitz_optimizer.py  test_blitz_perturbations.py  test_blitz_simulation.py  test_bug_fixes.py  test_calibration.py  test_cascade_delete.py  test_composite.py  test_db.py  test_derived_features.py  test_detect_false_start.py  test_detect_long_pause.py  test_detect_repetition.py  test_detection_config.py  test_issues_endpoints.py  test_manuscript_extract.py  test_new_detection_config.py  test_normalize.py  test_recommendations.py  test_replace_chapter_audio.py  test_scoring_detectors.py  test_scoring_pipeline.py  test_signal_fusion.py  test_take_ranking.py  test_take_windows.py  test_timecode.py  test_tokenization.py  (+1 more)
(+124 files in other folders)
