[project]
name = "audiobook-editor-api"
version = "0.1.0"
description = "Local-first audiobook review backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlmodel>=0.0.22",
  "alembic>=1.13",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "numpy>=2.0",
  "pymupdf>=1.24",
]

[project.optional-dependencies]
gpu = [
  "faster-whisper>=1.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
